# Chinese-name-meaning

./: .gitignore  CLAUDE.md  COMMIT_PROGRESS.md  NameExpert.modelfile  README.md  evaluate_classifier.py  package-lock.json
.github/workflows/: release.yml
.venv-xls/: pyvenv.cfg
my-vue-app/: .dockerignore  .gitignore  Dockerfile  README.md  annotate_names.py  create_manifest.py  export_fix.py  export_onnx.py  generate_dataset.py  index.html  nginx.conf  package-lock.json  package.json  serve.py  train_model.py  training_data.json  tsconfig.app.json  vite.config.ts  新华字典，康熙字典数据库，合计6万条数据.7z:Zone.Identifier
my-vue-app/.venv-train/: pyvenv.cfg
my-vue-app/e2e/: vue.spec.ts
my-vue-app/public/data/: chars.json  chars_zh_pending.json  surnames.json  word.json:Zone.Identifier
my-vue-app/public/models/: classifier.onnx  classifier.onnx.data  manifest.json
my-vue-app/src/: App.vue  onnxruntime-web.d.ts  types.ts
my-vue-app/src-tauri/: Cargo.toml  tauri.conf.json
my-vue-app/src-tauri/src/: main.rs
my-vue-app/src/__tests__/: App.spec.ts  nameAnalyzer.spec.ts
my-vue-app/src/components/: CharacterCard.vue
my-vue-app/src/data/: cultural.json  cultural.ts
my-vue-app/src/services/: localInference.ts  nameAnalyzer.ts
my-vue-app/src/workers/: localInference.worker.ts
